<resources>
    <string name="app_name">FinalProject</string>
    <string name="aviation_app">Aviation Stack Flight Tracker</string>
    <string name="ask_code">Airport Code: </string>
    <string name="searchFlight">Search</string>
    <string name="viewSavedFlights">My Flights</string>
    <string name="code_entered">Code</string>
    <string name="flightNumLabel">Flight Number: </string>
    <string name="destinationLabel">To: </string>
    <string name="terminalLabel">Terminal:</string>
    <string name="gateID">Gate: </string>
    <string name="delayID">Delay: </string>
    <string name="saveFlightButton">Save Flight</string>
    <string name="deleteFlightButton">Delete Flight</string>
    <string name="action_help">Help</string>
    <string name="help_title">Help</string>
    <string name="help_message">Enter the desired image size and press the generate button to fetch a bear image. You can save or delete the image using the provided options.</string>
    <string name="ok">OK</string>
    <string name="hint_enter_size">Enter Image Size</string>
    <string name="button_generate">Generate</string>
    <string name="delete">Delete</string>
    <string name="button_save">save</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="helpmessage">"Select one out of the 4 options, the highlighted box is the selected answer. You can click next answer to progress to the next question, or submit the quiz after answering the first question."</string>
    <string name="bear">bear</string>

    master
</resources>