<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="algonquin.cst2335.finalproject.FlightFragment"
        android:layout_width="339dp"
        android:layout_height="534dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="195dp"
        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"
        app:layout_constraintTop_toTopOf="@+id/fragmentContainerView"
        app:srcCompat="@drawable/plane" />

    <TextView
        android:id="@+id/terminalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/terminalLabel"
        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/terminalContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="terminal here"
        app:layout_constraintStart_toEndOf="@+id/terminalID"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/gateID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/gateID"
        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"
        app:layout_constraintTop_toBottomOf="@+id/terminalID" />

    <TextView
        android:id="@+id/gateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="gate here"
        app:layout_constraintStart_toEndOf="@+id/gateID"
        app:layout_constraintTop_toBottomOf="@+id/terminalContent" />

    <TextView
        android:id="@+id/delayID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/delayID"
        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"
        app:layout_constraintTop_toBottomOf="@+id/gateID" />

    <TextView
        android:id="@+id/delayContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="delay here"
        app:layout_constraintStart_toEndOf="@+id/delayID"
        app:layout_constraintTop_toBottomOf="@+id/gateContent" />

    <Button
        android:id="@+id/saveFlightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="88dp"
        android:text="@string/saveFlightButton"
        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView"
        app:layout_constraintTop_toBottomOf="@+id/delayContent" />
</androidx.constraintlayout.widget.ConstraintLayout>